[package]
name = "prefix_api"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha256 = "1.5.0"
shellexpand = "3.1.0"
subst = "0.3.7"
tokio = { version = "1.42.0", features = ["full"] }
